@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'application'
 
 sourceCompatibility = '1.8'
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
@@ -6,6 +7,9 @@ sourceCompatibility = '1.8'
 if (!hasProperty('mainClass')) {
     ext.mainClass = ''
 }
+
+mainClassName = mainClass
+applicationDefaultJvmArgs = ["-XX:MaxPermSize=192m", "-Xmx1G"]
 
 repositories {
     mavenCentral()
